--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:postgresql://localhost/smarthome
+spring.datasource.username=postgres
+spring.datasource.password=nikitasuper99
+spring.jpa.generate-ddl=true
 
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
